FIX: html structure corrected

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-      <div class="background-img">
-        <div class="wrapper">
-          <div class="percentage">100%</div>
-        </div>
+      <div class="wrapper">
+        <div class="background-img"></div>
+        <div class="percentage">100%</div>
       </div>
     </main>
     <!--main section end-->
